Job bug fixed